[gd_scene load_steps=4 format=3 uid="uid://bnn4vemfurkmf"]

[ext_resource type="Script" path="res://addons/tabby_explorer/editor/sub_fs_dock/sub_fs_tab_content.gd" id="1_te6h5"]

[sub_resource type="Image" id="Image_r0p6f"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_262o4"]
image = SubResource("Image_r0p6f")

[node name="TabContent" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_te6h5")

[node name="main" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="toolbar" type="HBoxContainer" parent="main"]
layout_mode = 2

[node name="history" type="HBoxContainer" parent="main/toolbar"]
visible = false
layout_mode = 2

[node name="prev_btn" type="Button" parent="main/toolbar/history"]
layout_mode = 2
size_flags_vertical = 0
text = " < "

[node name="next_btn" type="Button" parent="main/toolbar/history"]
layout_mode = 2
size_flags_vertical = 0
text = " > "

[node name="item_info" type="VBoxContainer" parent="main/toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="path_body" type="HBoxContainer" parent="main/toolbar/item_info"]
layout_mode = 2

[node name="Label" type="Label" parent="main/toolbar/item_info/path_body"]
visible = false
layout_mode = 2
vertical_alignment = 1

[node name="copy_res_path_btn" type="Button" parent="main/toolbar/item_info/path_body"]
visible = false
layout_mode = 2
tooltip_text = "Copy resource path to clipboard"
icon = SubResource("ImageTexture_262o4")

[node name="pin_btn" type="Button" parent="main/toolbar/item_info/path_body"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Pin selected folder"
toggle_mode = true
icon = SubResource("ImageTexture_262o4")
icon_alignment = 1

[node name="res_path_edit" type="LineEdit" parent="main/toolbar/item_info/path_body"]
layout_mode = 2
size_flags_horizontal = 3
select_all_on_focus = true

[node name="tools" type="HBoxContainer" parent="main/toolbar/item_info/path_body"]
layout_mode = 2

[node name="reload_btn" type="Button" parent="main/toolbar/item_info/path_body/tools"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Reload"
icon = SubResource("ImageTexture_262o4")
icon_alignment = 1

[node name="post_selection_fs_dock_btn" type="Button" parent="main/toolbar/item_info/path_body/tools"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Attempt to navigate to the currently selected item in the Editor's default FileSystem Dock"
icon = SubResource("ImageTexture_262o4")
icon_alignment = 1

[node name="expand_btn" type="Button" parent="main/toolbar/item_info/path_body/tools"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Toggle additional information"
theme_override_constants/h_separation = 10
toggle_mode = true
icon = SubResource("ImageTexture_262o4")
icon_alignment = 1

[node name="more_info_cont" type="GridContainer" parent="main/toolbar/item_info"]
visible = false
layout_mode = 2
theme_override_constants/h_separation = 15
columns = 2

[node name="uid_body" type="HBoxContainer" parent="main/toolbar/item_info/more_info_cont"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="main/toolbar/item_info/more_info_cont/uid_body"]
visible = false
layout_mode = 2
text = "UID"
vertical_alignment = 1

[node name="copy_btn" type="Button" parent="main/toolbar/item_info/more_info_cont/uid_body"]
visible = false
layout_mode = 2
tooltip_text = "Copy resource UID to clipboard"
icon = SubResource("ImageTexture_262o4")

[node name="edit" type="LineEdit" parent="main/toolbar/item_info/more_info_cont/uid_body"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "UID"
select_all_on_focus = true

[node name="name_body" type="HBoxContainer" parent="main/toolbar/item_info/more_info_cont"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="main/toolbar/item_info/more_info_cont/name_body"]
layout_mode = 2
text = "Name"
vertical_alignment = 1

[node name="copy_btn" type="Button" parent="main/toolbar/item_info/more_info_cont/name_body"]
visible = false
layout_mode = 2
tooltip_text = "Copy resource UID to clipboard"
icon = SubResource("ImageTexture_262o4")

[node name="edit" type="LineEdit" parent="main/toolbar/item_info/more_info_cont/name_body"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "NAME"
editable = false
select_all_on_focus = true

[node name="filter_cont" type="HBoxContainer" parent="main"]
layout_mode = 2

[node name="filter_edit" type="LineEdit" parent="main/filter_cont"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter Files"
clear_button_enabled = true
select_all_on_focus = true

[node name="tree" type="Tree" parent="main"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 12
allow_rmb_select = true

[node name="popup_menu_keeper" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
